--- a/style.css
+++ b/style.css
@@ -1,6 +1,44 @@
 #pkmnContainer {
-    width: 900px;
-    height: 450px;
-    background-color: blueviolet;
+    width: 800vh;
+    height: auto;
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 30px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    margin-top: 20px;
+   
 }
+
+.imgContainer {
+
+    background-size: contain;
+    background-color: rgb(153, 152, 241);
+    border-radius: 15px;
+    
+
+}
+
+
+
+.pokemonCard
+ {
+  border-radius: 10px;
+  padding: 10px;
+  background-color: white;
+  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.name {
+    text-transform: capitalize;
+    font-weight: bold;
+    font-size: 1.2rem;
+  }
 
